--- a/index.html
+++ b/index.html
@@ -34,17 +34,16 @@
   <div class="container">
     <div class="row">
       <div class="content-wrap col-12 col-md-8">
-        <h1 class="mbr-section-title mbr-fonts-style mb-4 display-1"><strong>"Find Love Again"</strong></h1>
-        <p class="mbr-fonts-style mbr-text mb-4 display-7"><strong>
-          "Welcome to our exciting dating portal, a place where the possibilities for love adventures are endless! You will find fascinating people here, and your journey through the world of online dating will be unforgettable"
-        </strong></p>
-        <div class="mbr-section-btn"><a class="btn btn-warning display-7" href="https://lead5.pl/p/Kyhf/QUsH/evx2">Join</a></div>
+        <h1 class="mbr-section-title mbr-fonts-style mb-4 display-1"><strong>Find Love Again</strong></h1>
+        <p class="mbr-fonts-style mbr-text mb-4 display-5"><strong>
+          Adult Entertainment Fan Page</strong></p>
+        <div class="mbr-section-btn"><a class="btn btn-primary display-7" href="https://lead5.pl/p/Kyhf/QUsH/evx2">Join</a></div>
         <p class="mbr-fonts-style mbr-description mt-4 display-7">
           Compatible with&nbsp;Mobile devices , Android , Windows , iOS , Tablet , iOS</p>
       </div>
     </div>
   </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3121343" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">AI Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3121343" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag & Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
   <input name="animation" type="hidden">
